fix size crash on mobile version

--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -4,6 +4,7 @@
 
 .whole-body {
     background-color:whitesmoke;
+    min-width: 100vh;
 }
 
 .home-body {
